tests/reference/asr-test_str_indexing-433fbfd.stderr
semantic error: Type mismatch in index, Index should be of integer type
 --> tests/errors/test_str_indexing.py:4:13
  |
4 |     print(s[1.2])
  |             ^^^ type mismatch (found: 'f64', expected: 'i32')
